--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.14",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-wasm": "^1.0.1",
+    "wasm-loader": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
