--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jimp": "^0.16.1",
-    "sharp": "^0.27.1",
-    "ytdl-core": "^2.1.2"
+    "sharp": "^0.27.1"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
