--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,12 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
-    "js-meter": "^1.1.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.14",
-    "react-scripts": "3.4.1",
-    "react-wasm": "^1.0.1",
-    "wasm-loader": "^1.3.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,6 +17,12 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000/",
+  "development": [
+    "ie 11",
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
+  ],
   "browserslist": [
     ">0.2%",
     "not dead",
