--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "dependencies": {
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-app-rewired": "^2.1.8",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "development": [
@@ -27,5 +26,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-app-rewired": "^2.1.8",
+    "worker-loader": "^3.0.8"
+  }
 }
