--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.14",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "use-state-with-callback": "^2.0.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
