--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-html-table-to-excel": "^2.0.0",
     "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.1",
     "use-state-with-callback": "^2.0.3"
