--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Clipzz",
-  "name": "Clipzz - downloader",
+  "short_name": "Image Editor",
+  "name": "Image Editor",
   "icons": [
     {
       "src": "favicon.ico",
