--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
   "name": "image-editor",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "MIT",
+  "homepage" : "https://mspas.github.io/Image-Editor",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "node-sass": "^4.14.1",
+    "node-sass": "npm:sass@^1.55.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-html-table-to-excel": "^2.0.0",
     "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.1",
-    "use-state-with-callback": "^2.0.3"
+    "use-state-with-callback": "^2.0.3",
+    "react-app-rewired": "^2.1.8",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "development": [
     "ie 11",
@@ -33,7 +38,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-app-rewired": "^2.1.8",
-    "worker-loader": "^3.0.8"
+    "gh-pages": "^3.2.3"
   }
 }
